# simple_chat

./: Cargo.toml  README.md  Rocket.toml
src/: lib.rs  main.rs
src/chatroom/: mod.rs
src/chatserver/: mod.rs
src/loadbalancer/: mod.rs
src/message/: mod.rs
src/server/: mod.rs
src/servers/: mod.rs
src/servers/messages/: mod.rs
src/servers/user_mapping/: mod.rs
src/socket_server/: mod.rs
src/user/: mod.rs
src/utils/: mod.rs
src/utils/channels/: mod.rs
src/utils/thread_pool/: mod.rs
tests/: user_mapping_test.rs
