[package]
name = "simple_chat"
version = "0.1.0"
edition = "2021"

[dependencies]
env_logger = "0.11.5"
femme = "2.2.1"
futures = "0.3.31"
log = "0.4.22"
r3bl_tui = "0.6.0"
serde = {version = "1.0.214", features = ["derive"]}
serde_json = "1.0.132"
tokio = { version = "1.41.0", features = ["full"] }
tokio-tungstenite = "0.24.0"
tokio-util = "0.7.12"
warp = "0.3.7"
simple_logger = "5.0.0"
rocket = "0.5.1"
ws = { package = "rocket_ws", version = "0.1.1" }
reqwest = "0.12.9"

[dependencies.rocket_contrib]
version = "0.4.11"
default-features = false
features = ["json"]

#[[bin]]
#name = "simple_chat"
#path = "./src/server/mod.rs"